--- a/metodo2/index.html
+++ b/metodo2/index.html
@@ -3,17 +3,28 @@
   <head>
     <meta charset="utf-8">
     <title>Php music2</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.2/handlebars.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"></script>
     <link rel="stylesheet" href="../style.css">
+    <script  id="song-template" type="text/x-handlebars-template">
+      <div >
+        <img class="cover" src="{{poster}}" alt="{{title}}">
+        <h3>{{title}}</h3>
+        <h4>{{author}}</h4>
+        <span>{{year}}</span>
+      </div>
+    </script>
   </head>
   <body>
     <header>
 
     </header>
     <main>
-      <div class="container">
+      <div id="container">
 
       </div>
     </main>
+    <script src="script.js" type="text/javascript" ></script>
   </body>
 </html>
